--- a/phanterps2.cfg
+++ b/phanterps2.cfg
@@ -1,3 +1,6 @@
-pasta_destino_jogos = Z:\
-pasta_cover_art = D:\PS2\ART
+pasta_DVD = D:\PS2\DVD
+pasta_CFG = D:\PS2\CFG
 dicionario = 
+pasta_ART = D:\PS2\ART
+pasta_destino_jogos = D:\PS2
+pasta_CD = D:\PS2\CD
