--- a/imagem_check.cfg
+++ b/imagem_check.cfg
@@ -1,116 +1,132 @@
-Z:\ART\SLUS_209.98_COV.jpg = OK
 Z:\ART\SLUS_218.08_COV.jpg = OK
 Z:\ART\SLUS_219.06_COV.png = OK
 Z:\ART\PHAN_003.00_COV.jpg = OK
-Z:\ART\SLUS_218.70_COV.png = OK
+G:\ART\SLUS_212.15_COV.jpg = OK
 Z:\ART\SLES_532.97_COV.jpg = OK
 Z:\ART\SLUS_212.28_COV.jpg = OK
-Z:\ART\SLUS_208.51_COV.jpg = OK
+Z:\ART\SLUS_211.63_COV.jpg = OK
 Z:\ART\SLUS_217.49_COV.jpg = OK
-Z:\ART\SLUS_211.99_COV.jpg = OK
 Z:\ART\SLUS_216.02_COV.png = OK
 Z:\ART\SLES_523.39_COV.png = OK
-Z:\ART\SLUS_207.10_COV.jpg = OK
 Z:\ART\SCUS_973.99_COV.jpg = OK
 Z:\ART\SLUS_211.89_COV.png = OK
 Z:\ART\SLUS_210.62_COV.png = OK
-Z:\ART\SLUS_213.04_COV.png = OK
+Z:\ART\SLPM_627.66_COV.jpg = OK
+Z:\ART\SLUS_218.40_COV.jpg = OK
 Z:\ART\SLPM_623.85_COV.png = OK
+Z:\ART\SLUS_213.69_COV.jpg = OK
 Z:\ART\SLUS_213.11_COV.jpg = OK
+Z:\ART\SLPM_624.44_COV.jpg = OK
 Z:\ART\SLUS_212.38_COV.jpg = OK
 Z:\ART\SLUS_208.98_COV.jpg = OK
-Z:\ART\SLUS_201.32_COV.png = OK
+Z:\ART\SLPM_667.50_COV.jpg = OK
+Z:\ART\SLUS_210.83_COV.jpg = OK
+Z:\ART\SLUS_208.93_COV.jpg = OK
 Z:\ART\SLES_547.76_COV.png = OK
+Z:\ART\SLPM_627.60_COV.jpg = OK
 Z:\ART\SLUS_216.16_COV.jpg = OK
-Z:\ART\SLUS_218.04_COV.jpg = OK
+D:\PS2\ART\SLUS_212.12_COV.jpg = OK
 Z:\ART\SLES_534.19_COV.png = OK
 Z:\ART\SLES_551.99_COV.jpg = OK
 Z:\ART\SLUS_213.15_COV.jpg = OK
 Z:\ART\SLUS_204.59_COV.jpg = OK
 Z:\ART\SLUS_217.38_COV.jpg = OK
-Z:\ART\SLUS_206.86_COV.png = OK
+Z:\ART\SLPS_250.26_COV.png = OK
+Z:\ART\SLUS_218.79_COV.jpg = OK
 Z:\ART\SLUS_202.44_COV.jpg = OK
 Z:\ART\SLUS_204.07_COV.jpg = OK
 Z:\ART\SLES_530.32_COV.png = OK
 D:\PS2\ART\SLUS_212.38_COV.jpg = OK
 Z:\ART\SLES_553.45_COV.jpg = OK
+D:\PS2\ART\SLES_556.69_COV.jpg = OK
 Z:\ART\SLUS_211.04_COV.png = OK
 Z:\ART\SLUS_203.75_COV.png = OK
 Z:\ART\SLUS_204.35_COV.png = OK
 Z:\ART\SLUS_203.02_COV.png = OK
+Z:\ART\SLPM_627.67_COV.jpg = OK
 Z:\ART\SLUS_204.62_COV.jpg = OK
 Z:\ART\SLUS_216.97_COV.png = OK
-Z:\ART\SLUS_212.15_COV.jpg = OK
-Z:\ART\SLUS_203.85_COV.png = OK
+Z:\ART\SLUS_218.77_COV.png = OK
+Z:\ART\SLPM_623.84_COV.jpg = OK
 Z:\ART\SLUS_205.00_COV.png = OK
+Z:\ART\SLPM_627.12_COV.jpg = OK
 Z:\ART\SLUS_214.10_COV.jpg = OK
 Z:\ART\SLUS_205.95_COV.png = OK
 Z:\ART\SLUS_204.45_COV.png = OK
 Z:\ART\SLUS_207.93_COV.png = OK
-Z:\ART\SLPS_250.26_COV.png = OK
+Z:\ART\SLUS_206.86_COV.png = OK
 Z:\ART\SLUS_210.87_COV.jpg = OK
-Z:\ART\SLES_555.72_COV.jpg = OK
+Z:\ART\SLPM_627.17_COV.jpg = OK
+Z:\ART\SLUS_209.98_COV.jpg = OK
 Z:\ART\SLES_534.39_COV.png = OK
 Z:\ART\SLPM_663.74_COV.png = OK
-Z:\ART\SCES_504.99_COV.png = OK
+Z:\ART\SLUS_216.36_COV.jpg = OK
 Z:\ART\SLUS_202.79_COV.jpg = OK
 D:\PS2\ART\SLES_556.76_COV.png = OK
+Z:\ART\SLPM_627.08_COV.jpg = OK
+G:\ART\SLUS_207.70_COV.jpg = OK
 Z:\ART\SLES_541.71_COV.jpg = OK
 D:\PS2\ART\SCUS_973.28_COV.jpg = OK
 Z:\ART\SLUS_203.67_COV.jpg = OK
 D:\PS2\ART\SLUS_215.97_COV.png = OK
 Z:\ART\SLES_503.86_COV.png = OK
-Z:\ART\SLUS_211.39_COV.jpg = OK
 Z:\ART\SLUS_200.13_COV.jpg = OK
-Z:\ART\SLES_528.01_COV.png = OK
+Z:\ART\SLUS_201.30_COV.jpg = OK
+Z:\ART\SLPM_626.91_COV.jpg = OK
 Z:\ART\SLUS_212.73_COV.png = OK
 Z:\ART\SLES_522.03_COV.png = OK
 Z:\ART\SLUS_209.01_COV.png = OK
-Z:\ART\SLUS_201.30_COV.jpg = OK
+G:\ART\SLUS_210.59_COV.png = OK
 Z:\ART\SLUS_210.68_COV.png = OK
-Z:\ART\SCUS_976.21_COV.jpg = OK
-Z:\ART\SLUS_209.15_COV.jpg = OK
-Z:\ART\SLUS_210.20_COV.jpg = OK
+Z:\ART\SLES_515.23_COV.png = OK
+Z:\ART\SLUS_212.87_COV.jpg = OK
 Z:\ART\SLES_546.58_COV.jpg = OK
-Z:\ART\SLUS_203.06_COV.png = OK
+Z:\ART\SLPM_624.45_COV.jpg = OK
 Z:\ART\SLUS_205.56_COV.png = OK
 Z:\ART\PHAN_001.00_COV.png = OK
 Z:\ART\SLUS_208.36_COV.jpg = OK
 Z:\ART\SLUS_218.41_COV.png = OK
 Z:\ART\SCES_544.77_COV.jpg = OK
 D:\PS2\ART\SLUS_204.35_COV.png = OK
+Z:\ART\SLUS_210.79_COV.jpg = OK
 Z:\ART\SLES_547.82_COV.jpg = OK
 Z:\ART\SLPM_652.18_COV.jpg = OK
-D:\PS2\ART\SLUS_213.76_COV.jpg = OK
+Z:\ART\SLUS_212.15_COV.jpg = OK
 Z:\ART\SLES_530.87_COV.png = OK
-Z:\ART\SLUS_218.73_COV.png = OK
+G:\ART\SLUS_216.61_COV.jpg = OK
 Z:\ART\SLUS_211.15_COV.jpg = OK
-Z:\ART\SLUS_208.93_COV.jpg = OK
-Z:\ART\SLES_550.15_COV.jpg = OK
-Z:\ART\SLUS_214.26_COV.png = OK
+Z:\ART\SLUS_208.51_COV.jpg = OK
+Z:\ART\SLPM_624.47_COV.jpg = OK
+D:\PS2\ART\SLES_546.58_COV.jpg = OK
+Z:\ART\SLPM_624.00_COV.jpg = OK
 Z:\ART\SLUS_200.18_COV.jpg = OK
 Z:\ART\SLES_518.85_COV.jpg = OK
 Z:\ART\SLUS_213.76_COV.jpg = OK
 Z:\ART\SCES_500.06_COV.jpg = OK
+Z:\ART\SLUS_219.40_COV.png = OK
 Z:\ART\SLUS_210.65_COV.jpg = OK
-Z:\ART\SCUS_973.28_COV.jpg = OK
+Z:\ART\SLUS_213.04_COV.png = OK
 Z:\ART\SLES_534.30_COV.png = OK
 Z:\ART\SLES_520.95_COV.jpg = OK
 Z:\ART\SLUS_213.56_COV.png = OK
-Z:\ART\SLUS_208.43_COV.png = OK
-Z:\ART\SLUS_203.68_COV.png = OK
+Z:\ART\SLUS_203.06_COV.png = OK
+Z:\ART\SLUS_215.93_COV.png = OK
+Z:\ART\SLUS_218.73_COV.png = OK
 Z:\ART\SLUS_210.50_COV.jpg = OK
+G:\ART\SCES_539.50_COV.jpg = OK
 D:\PS2\ART\SCUS_974.72_COV.jpg = OK
 Z:\ART\SLUS_210.59_COV.png = OK
+Z:\ART\SLUS_207.10_COV.jpg = OK
 Z:\ART\SLES_554.42_COV.png = OK
-D:\PS2\ART\SLES_551.86_COV.png = OK
 Z:\ART\SLUS_206.41_COV.jpg = OK
 D:\PS2\ART\SLUS_204.90_COV.jpg = OK
+Z:\ART\SLUS_210.77_COV.png = OK
 Z:\ART\SLUS_203.74_COV.jpg = OK
-Z:\ART\SLUS_217.74_COV.jpg = OK
-Z:\ART\SLUS_200.66_COV.png = OK
-Z:\ART\SLUS_216.78_COV.png = OK
-Z:\ART\SLUS_210.79_COV.jpg = OK
+Z:\ART\SLPM_626.87_COV.jpg = OK
+Z:\ART\SLES_528.01_COV.png = OK
+Z:\ART\SLUS_215.90_COV.jpg = OK
+D:\PS2\ART\SLES_551.86_COV.png = OK
+Z:\ART\SLPM_627.18_COV.jpg = OK
 Z:\ART\SLUS_205.45_COV.jpg = OK
 Z:\ART\SLUS_209.02_COV.jpg = OK
 D:\PS2\ART\SLPM_663.74_COV.png = OK
@@ -122,116 +138,138 @@ Z:\ART\SLES_525.07_COV.jpg = OK
 Z:\ART\SLUS_219.48_COV.jpg = OK
 Z:\ART\SLUS_208.85_COV.png = OK
 Z:\ART\SLUS_212.69_COV.jpg = OK
-Z:\ART\SLUS_216.27_COV.png = OK
+G:\ART\SLPM_663.74_COV.png = OK
 Z:\ART\SLES_512.32_COV.jpg = OK
 Z:\ART\SLUS_216.61_COV.jpg = OK
 Z:\ART\SLUS_202.93_COV.jpg = OK
 Z:\ART\SLUS_203.93_COV.png = OK
 Z:\ART\SLES_516.19_COV.jpg = OK
 Z:\ART\SLUS_210.42_COV.jpg = OK
-Z:\ART\SCES_520.04_COV.jpg = OK
+Z:\ART\SLPM_625.47_COV.jpg = OK
 Z:\ART\SCES_503.00_COV.jpg = OK
 D:\PS2\ART\SLUS_210.87_COV.jpg = OK
 Z:\ART\SLES_531.25_COV.png = OK
 Z:\ART\SLES_518.20_COV.png = OK
 Z:\ART\SLUS_213.17_COV.png = OK
+Z:\ART\SLPM_624.43_COV.jpg = OK
 Z:\ART\SLPM_663.70_COV.jpg = OK
 Z:\ART\SLES_530.92_COV.jpg = OK
-Z:\ART\SLUS_217.93_COV.png = OK
+Z:\ART\SLUS_201.32_COV.png = OK
+G:\ART\SLUS_210.88_COV.png = OK
 Z:\ART\SLUS_211.79_COV.png = OK
 Z:\ART\SLUS_211.84_COV.jpg = OK
 Z:\ART\SLES_527.07_COV.jpg = OK
+Z:\ART\SLUS_200.66_COV.png = OK
 Z:\ART\SLES_549.97_COV.png = OK
 Z:\ART\SLES_552.36_COV.jpg = OK
 Z:\ART\SLUS_205.79_COV.png = OK
+Z:\ART\SLUS_207.77_COV.jpg = OK
 Z:\ART\SLUS_205.65_COV.png = OK
-Z:\ART\SLES_539.98_COV.jpg = OK
+D:\PS2\ART\SLUS_211.48_COV.jpg = OK
+Z:\ART\SLUS_216.27_COV.png = OK
 Z:\ART\SLUS_213.85_COV.jpg = OK
+Z:\ART\SLUS_212.07_COV.jpg = OK
 Z:\ART\SCES_507.60_COV.jpg = OK
+Z:\ART\SLES_513.08_COV.jpg = OK
 Z:\ART\SLUS_201.52_COV.jpg = OK
 Z:\ART\SLES_537.55_COV.jpg = OK
-Z:\ART\SLES_515.23_COV.png = OK
+Z:\ART\SCUS_976.21_COV.jpg = OK
 Z:\ART\SLUS_201.44_COV.png = OK
 Z:\ART\SLUS_207.25_COV.jpg = OK
+Z:\ART\SLPM_627.46_COV.jpg = OK
 Z:\ART\SLUS_209.10_COV.png = OK
 Z:\ART\SLUS_209.32_COV.jpg = OK
 Z:\ART\SLUS_205.08_COV.jpg = OK
 D:\PS2\ART\SLES_540.02_COV.jpg = OK
 Z:\ART\SLES_556.76_COV.png = OK
-Z:\ART\SLUS_212.87_COV.jpg = OK
+Z:\ART\SLUS_217.93_COV.png = OK
 Z:\ART\SLUS_210.26_COV.png = OK
 Z:\ART\SLES_530.24_COV.png = OK
+D:\PS2\ART\SLUS_213.76_COV.jpg = OK
 Z:\ART\SCUS_975.02_COV.jpg = OK
 Z:\ART\SLUS_201.77_COV.png = OK
 Z:\ART\SLES_544.78_COV.png = OK
-Z:\ART\SLES_533.01_COV.png = OK
+Z:\ART\SLES_549.17_COV.jpg = OK
 Z:\ART\SLUS_211.98_COV.jpg = OK
+Z:\ART\SLES_530.39_COV.jpg = OK
 Z:\ART\SLES_534.16_COV.jpg = OK
 Z:\ART\SLES_553.64_COV.jpg = OK
 Z:\ART\SLUS_214.93_COV.jpg = OK
 Z:\ART\SLES_521.53_COV.png = OK
-Z:\ART\SLES_549.17_COV.jpg = OK
+F:\PhanterPS2\imagens\sample.jpg = Falhou
+Z:\ART\SLPM_626.92_COV.jpg = OK
 Z:\ART\SLUS_213.83_COV.jpg = OK
-Z:\ART\SLUS_216.36_COV.jpg = OK
-D:\PS2\ART\SLES_546.58_COV.jpg = OK
+Z:\ART\SLUS_209.15_COV.jpg = OK
 Z:\ART\SLUS_210.05_COV.jpg = OK
 Z:\ART\SLUS_207.43_COV.jpg = OK
 Z:\ART\SLES_535.57_COV.jpg = OK
-Z:\ART\PBPX_955.06_COV.jpg = OK
+Z:\ART\SLPM_625.00_COV.jpg = OK
+Z:\ART\SLUS_213.98_COV.jpg = OK
 D:\PS2\ART\SLUS_201.44_COV.png = OK
 Z:\ART\SLUS_211.10_COV.png = OK
 Z:\ART\SLUS_211.06_COV.jpg = OK
+Z:\ART\SLPM_624.32_COV.jpg = OK
+Z:\ART\SLES_519.81_COV.png = OK
 Z:\ART\SCUS_971.02_COV.jpg = OK
-Z:\ART\SLES_554.87_COV.jpg = OK
-Z:\ART\SLUS_218.79_COV.jpg = OK
-Z:\ART\SLES_544.90_COV.jpg = OK
+Z:\ART\SLUS_216.78_COV.png = OK
+Z:\ART\PBPX_955.06_COV.jpg = OK
+Z:\ART\SLUS_213.46_COV.jpg = OK
+Z:\ART\SLPM_627.09_COV.jpg = OK
 Z:\ART\SLKA_251.33_COV.jpg = OK
-Z:\ART\SLES_513.02_COV.jpg = OK
-Z:\ART\SLPM_667.50_COV.jpg = OK
+Z:\ART\SCUS_974.79_COV.jpg = OK
+Z:\ART\SLES_555.36_COV.jpg = OK
 Z:\ART\SLES_521.88_COV.png = OK
-Z:\ART\SLUS_210.77_COV.png = OK
-Z:\ART\SLES_507.31_COV.png = OK
+Z:\ART\SLES_539.98_COV.jpg = OK
+Z:\ART\SLUS_203.68_COV.png = OK
+Z:\ART\SLUS_211.99_COV.jpg = OK
+Z:\ART\SCES_539.50_COV.jpg = OK
 Z:\ART\SLUS_209.46_COV.jpg = OK
-Z:\ART\SLUS_209.60_COV.jpg = OK
+Z:\ART\SLUS_218.04_COV.jpg = OK
 Z:\ART\SLES_506.72_COV.png = OK
 Z:\ART\SLUS_218.18_COV.jpg = OK
-Z:\ART\SLUS_207.70_COV.jpg = OK
+Z:\ART\SCES_514.63_COV.jpg = OK
+Z:\ART\SLUS_210.20_COV.jpg = OK
 Z:\ART\SLUS_210.22_COV.jpg = OK
-Z:\ART\SLES_513.08_COV.jpg = OK
-Z:\ART\SLUS_211.63_COV.jpg = OK
+Z:\ART\SLUS_209.60_COV.jpg = OK
+Z:\ART\SLPM_626.06_COV.jpg = OK
+Z:\ART\SLUS_214.26_COV.png = OK
 Z:\ART\SLUS_204.90_COV.jpg = OK
 Z:\ART\SLES_508.97_COV.jpg = OK
-Z:\ART\SLUS_218.40_COV.jpg = OK
-Z:\ART\SLUS_211.80_COV.jpg = OK
+Z:\ART\SLUS_218.42_COV.png = OK
 Z:\ART\SLUS_213.86_COV.png = OK
+Z:\ART\SLUS_205.04_COV.jpg = OK
+Z:\ART\SLPM_623.66_COV.jpg = OK
 Z:\ART\SLUS_215.96_COV.jpg = OK
 Z:\ART\SLUS_209.86_COV.jpg = OK
 D:\PS2\ART\SLUS_209.32_COV.jpg = OK
+Z:\ART\SLES_550.15_COV.jpg = OK
 D:\PhanterJR\Documents\GitHub\PhanterPS2\imagens\sample.jpg = OK
 Z:\ART\SLUS_217.46_COV.png = OK
-Z:\ART\SLES_555.36_COV.jpg = OK
-Z:\ART\SLES_551.86_COV.png = OK
+D:\PS2\ART\SLPM_627.09_COV.jpg = OK
+G:\ART\SLUS_209.46_COV.jpg = OK
 Z:\ART\SLUS_215.83_COV.png = OK
 Z:\ART\SCUS_974.72_COV.jpg = OK
-Z:\ART\SLUS_205.04_COV.jpg = OK
-Z:\ART\SCES_532.47_COV.jpg = OK
+Z:\ART\SLES_533.01_COV.png = OK
+Z:\ART\SLUS_217.74_COV.jpg = OK
 D:\PS2\ART\SLUS_203.75_COV.png = OK
-D:\PS2\ART\SLUS_212.12_COV.jpg = OK
+D:\PS2\ART\SLPM_624.25_COV.jpg = OK
 Z:\ART\SLUS_205.78_COV.png = OK
-Z:\ART\SLUS_215.93_COV.png = OK
+Z:\ART\SLUS_200.17_COV.jpg = OK
+Z:\ART\SCUS_973.28_COV.jpg = OK
 Z:\ART\SLUS_204.86_COV.jpg = OK
 Z:\ART\SLUS_213.55_COV.jpg = OK
-Z:\ART\SLES_508.79_COV.jpg = OK
+Z:\ART\SLES_551.86_COV.png = OK
 Z:\ART\SLUS_215.97_COV.png = OK
-Z:\ART\SLUS_207.77_COV.jpg = OK
+Z:\ART\SLPM_624.33_COV.jpg = OK
 Z:\ART\SLUS_201.71_COV.png = OK
-Z:\ART\SLUS_212.07_COV.jpg = OK
-Z:\ART\SLES_519.81_COV.png = OK
-Z:\ART\SLUS_210.88_COV.png = OK
-Z:\ART\SLUS_218.01_COV.jpg = OK
-Z:\ART\SLUS_212.62_COV.jpg = OK
 Z:\ART\SLUS_216.72_COV.jpg = OK
-Z:\ART\SLUS_203.70_COV.jpg = OK
+Z:\ART\SCES_504.99_COV.png = OK
+Z:\ART\SLUS_210.88_COV.png = OK
+Z:\ART\SLES_554.87_COV.jpg = OK
+Z:\ART\SLUS_212.62_COV.jpg = OK
+Z:\ART\SLPM_624.46_COV.jpg = OK
+Z:\ART\SLPM_623.64_COV.jpg = OK
+Z:\ART\SLPM_625.53_COV.jpg = OK
 Z:\ART\SLES_530.49_COV.jpg = OK
 Z:\ART\SLUS_213.79_COV.png = OK
 Z:\ART\SLES_547.79_COV.jpg = OK
@@ -242,39 +280,52 @@ Z:\ART\SLUS_201.11_COV.png = OK
 Z:\ART\SLUS_212.83_COV.jpg = OK
 Z:\ART\SLUS_203.48_COV.jpg = OK
 Z:\ART\SLUS_210.32_COV.png = OK
-Z:\ART\SLUS_218.77_COV.png = OK
+Z:\ART\SLUS_207.70_COV.jpg = OK
 Z:\ART\SLUS_217.28_COV.png = OK
 Z:\ART\SLES_550.05_COV.png = OK
-Z:\ART\SLES_542.12_COV.jpg = OK
+Z:\ART\SLUS_218.01_COV.jpg = OK
+Z:\ART\SLPS_254.76_COV.jpg = OK
+Z:\ART\SLPM_623.62_COV.jpg = OK
+Z:\ART\SCES_520.04_COV.jpg = OK
 Z:\ART\SLUS_205.15_COV.png = OK
+Z:\ART\SLES_542.12_COV.jpg = OK
+Z:\ART\SLUS_202.65_COV.jpg = OK
 Z:\ART\SLUS_207.45_COV.jpg = OK
 Z:\ART\SLES_530.38_COV.jpg = OK
 D:\PS2\ART\SLUS_203.67_COV.jpg = OK
-Z:\ART\SLUS_219.40_COV.png = OK
+Z:\ART\SLES_544.90_COV.jpg = OK
+Z:\ART\SCES_532.47_COV.jpg = OK
+Z:\ART\SLUS_211.80_COV.jpg = OK
 Z:\ART\SLES_518.43_COV.png = OK
-Z:\ART\SLUS_215.90_COV.jpg = OK
 D:\PS2\ART\SLES_556.35_COV.jpg = OK
-Z:\ART\SLUS_213.98_COV.jpg = OK
+Z:\ART\SLUS_211.48_COV.jpg = OK
 Z:\ART\SLUS_206.88_COV.jpg = OK
 Z:\ART\SLUS_213.62_COV.jpg = OK
+Z:\ART\SLES_555.72_COV.jpg = OK
+Z:\ART\SLPM_624.25_COV.jpg = OK
+G:\ART\SLES_556.76_COV.png = OK
 Z:\ART\SLPS_250.88_COV.png = OK
+Z:\ART\SLUS_208.43_COV.png = OK
 Z:\ART\SLUS_213.92_COV.png = OK
-Z:\ART\SLUS_218.42_COV.png = OK
+Z:\ART\SLUS_218.70_COV.png = OK
 D:\PS2\ART\SLES_549.97_COV.png = OK
 Z:\ART\SLES_531.58_COV.png = OK
 Z:\ART\SLUS_212.42_COV.jpg = OK
 Z:\ART\SLUS_200.84_COV.jpg = OK
-Z:\ART\SCUS_974.79_COV.jpg = OK
+Z:\ART\SLES_513.02_COV.jpg = OK
 Z:\ART\SLES_556.35_COV.jpg = OK
-Z:\ART\SLUS_213.46_COV.jpg = OK
-Z:\ART\SCES_514.63_COV.jpg = OK
+Z:\ART\SLES_508.79_COV.jpg = OK
+G:\ART\SLES_547.76_COV.png = OK
 Z:\ART\SLES_540.02_COV.jpg = OK
+Z:\ART\SLES_507.31_COV.png = OK
 Z:\ART\SLES_535.53_COV.jpg = OK
+Z:\ART\SLUS_203.70_COV.jpg = OK
 Z:\ART\SLUS_207.51_COV.jpg = OK
 Z:\ART\SLES_555.92_COV.jpg = OK
 Z:\ART\PHAN_002.00_COV.png = OK
-Z:\ART\SLUS_200.17_COV.jpg = OK
+Z:\ART\SLUS_203.85_COV.png = OK
 Z:\ART\SLUS_211.34_COV.jpg = OK
+D:\PS2\ART\SCES_539.50_COV.jpg = OK
 Z:\ART\SLUS_206.94_COV.jpg = OK
 Z:\ART\SLES_535.01_COV.jpg = OK
 Z:\ART\SLES_501.85_COV.jpg = OK
@@ -282,4 +333,4 @@ Z:\ART\SLUS_218.86_COV.jpg = OK
 Z:\ART\SLUS_205.50_COV.png = OK
 Z:\ART\SCES_532.86_COV.jpg = OK
 Z:\ART\SCUS_974.81_COV.jpg = OK
-Z:\ART\SLUS_210.83_COV.jpg = OK
+Z:\ART\SLUS_211.39_COV.jpg = OK
