--- a/phanterps2.cfg
+++ b/phanterps2.cfg
@@ -1,6 +1,6 @@
-pasta_DVD = D:\PS2\DVD
-pasta_CFG = D:\PS2\CFG
+pasta_DVD = Z:\DVD
+pasta_CFG = Z:\CFG
 dicionario = 
-pasta_ART = D:\PS2\ART
-pasta_destino_jogos = D:\PS2
-pasta_CD = D:\PS2\CD
+pasta_ART = Z:\ART
+pasta_destino_jogos = Z:\
+pasta_CD = Z:\CD
