--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ language/sample.lng
 language/en-EN.lng
 imagem_check.cfg
 Dependências/lista de dependências.txt
+imagem_check.cfg
+imagem_check.cfg
+language/en-EN.lng
+language/sample.lng
