--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ imagem_check.cfg
 imagem_check.cfg
 language/en-EN.lng
 language/sample.lng
+language/googletranslate.py
+language/googletranslate.txt
+language/traduzido.txt
+phanterps2.cfg
