Preparando para o primeiro release

--- a/phanterps2.cfg
+++ b/phanterps2.cfg
@@ -1,6 +1,10 @@
-pasta_DVD = Z:\DVD
-pasta_CFG = Z:\CFG
-dicionario = 
-pasta_ART = Z:\ART
-pasta_destino_jogos = Z:\
-pasta_CD = Z:\CD
+pasta_DVD = D:\teste\DVD
+ART = D:\PS2\ART
+PADRAO = D:\PS2
+DVD = D:\PS2\DVD
+pasta_CFG = D:\teste\CFG
+DICIONARIO = 
+CD = D:\PS2\CD
+pasta_ART = D:\teste\ART
+CFG = D:\PS2\CFG
+pasta_CD = D:\teste\CD
