--- a/phanterps2.cfg
+++ b/phanterps2.cfg
@@ -1,10 +1,10 @@
 pasta_DVD = D:\teste\DVD
-ART = D:\PS2\ART
-PADRAO = D:\PS2
-DVD = D:\PS2\DVD
+ART = D:\teste\ART
+PADRAO = D:\teste
+DVD = D:\teste\DVD
 pasta_CFG = D:\teste\CFG
 DICIONARIO = 
-CD = D:\PS2\CD
+CD = D:\teste\CD
 pasta_ART = D:\teste\ART
-CFG = D:\PS2\CFG
+CFG = D:\teste\CFG
 pasta_CD = D:\teste\CD
