Novo arquivo de configuração

--- a/phanterps2.cfg
+++ b/phanterps2.cfg
@@ -1,10 +1,12 @@
 pasta_DVD = D:\teste\DVD
-ART = D:\teste\ART
-PADRAO = D:\teste
-DVD = D:\teste\DVD
+ART = D:\PS2\ART
+PADRAO = D:\PS2
+DVD = D:\PS2\DVD
 pasta_CFG = D:\teste\CFG
 DICIONARIO = 
-CD = D:\teste\CD
+CD = D:\PS2\CD
+CLASSIFICACAO_CAMPO = 2
+CLASSIFICACAO_ORDEM = 0
 pasta_ART = D:\teste\ART
-CFG = D:\teste\CFG
+CFG = D:\PS2\CFG
 pasta_CD = D:\teste\CD
