Ignorando mais arquivos

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,17 @@ language/googletranslate.py
 language/googletranslate.txt
 language/traduzido.txt
 phanterps2.cfg
+imagens/favicon64.png
+imagens/favicon256.png
+imagens/favicon128.png
+imagens/favicon32.png
+imagens/favicon16.png
+imagens/CD-AUDIO_logo.png
+dados.zip
+imagem_check.cfg
+imagens/conexao.png
+imagens/icon.bkp
+imagens/splash.jpg
+imagens/Thumbs.db
+pwd
+imagem_check.cfg
