ignorando samples de traduções

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,10 @@ imagens/splash.jpg
 imagens/Thumbs.db
 pwd
 imagem_check.cfg
+linguagem/sample.txt
+linguagem/keys.txt
+linguagem/keys.lng
+language/sample.txt
+linguagem/traduzido.lng
+linguagem/traduzido.txt
+language/keys_traduzido.txt
